2006-06-21:	PHOEBE_0.29b bugfix version released.
2006-01-31:	PHOEBE_0.29a bugfix version released.
2006-01-13:	PHOEBE_0.29  stable version released.
2005-11-10:     PHOEBE_0.28a bugfix version released.
2005-11-01:     PHOEBE_0.28  stable version released.
2005-05-30:	PHOEBE_0.27  stable version released.
2004-10-21:	PHOEBE_0.26  stable version released.
2004-07-23:	PHOEBE_0.25  beta version released.
2004-05-03:	PHOEBE_0.24  beta version released.
2004-04-14:	PHOEBE_0.23  beta version released.
2004-01-19:	PHOEBE_0.22  beta version released.
2003-12-01:	PHOEBE_0.21  beta version released.
2003-06-01:	PHOEBE-0.20  beta version released.
2003-03-01:	PHOEBE-0.15  testing version released.
2003-01-13:	PHOEBE-0.14  testing version released.
2002-09-19:	PHOEBE-0.13  testing version released.
2002-08-01:	PHOEBE-0.12  testing version released.
2002-02-28:	PHOEBE-0.11  pre-testing version released.
2002-02-22:	PHOEBE-0.10  pre-testing version released.